styled politics page and added content

--- a/experience.html
+++ b/experience.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>Robert Nixon - Projects</title>
+        <title>Robert Nixon - Experience</title>
         <!-- Link to sakura -->
         <link rel="stylesheet" href="css/sakura.css" type="text/css">
     </head>
     <body>
     <a href="index.html"><h1>Robert Nixon</h1></a>
-    <h2>Projects</h2>
+    <h2>Experience</h2>
     <hr>
     <!-- Develop 1 -->
     <h3>Develop 1 Ltd</h3><i><h6>July 2016</h6></i>
