--- a/politics.html
+++ b/politics.html
@@ -1,51 +1,39 @@
 <html>
     <head>
-        <title>Robert Nixon</title>
-        
-        <!-- Add Google Roboto font -->
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-
-        <!-- Link main stylesheet -->
-        <link href="styles.css" rel="stylesheet" title="Main Stylesheet">
-
-        <!-- Github follow button script -->
-        <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <title>Robert Nixon - Politics</title>
+        <!-- Link to sakura -->
+        <link rel="stylesheet" href="css/sakura.css" type="text/css">
     </head>
     <body>
-
-        <!-- Heading -->
-        <header>
-            <center>
-                <h1>Robert Nixon</h1>
-                <h4>Programmer and Green Party Politician</h4>
-            </center>
-        </header>
-
-        <!-- Navigation -->
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-list-item"><a class="button-link" href="index.html">Home</a></li>
-                <li class="nav-list-item"><a class="button-link" href="projects.html">Projects</a></li>
-                <li class="nav-list-item"><a class="button-link" href="politics.html">Politics</a></li>
-                <li class="nav-list-item"><a class="button-link" href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-
-        <!-- Main Content -->
-        <main class="main-content">
-            <h2>Politics</h2>
-        </main>
-
-        <!-- Footer -->
-        <footer class="footer-container">
-            <div class=".footer-content-container">
-                <p>Follow on Github</p>
-                <a class="github-button" href="https://github.com/robnixon" data-style="mega" aria-label="Follow @robnixon on GitHub">Follow @robnixon</a>
-            </div>
-            <div class=".footer-content-container">
-                <p>Follow on Twitter</p>
-                <a href="https://twitter.com/robertnixongp" class="twitter-follow-button" data-show-count="false">Follow @robertnixongp</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-        </footer>
+    <a href="index.html"><h1>Robert Nixon</h1></a>
+    <h2>Politics</h2>
+    <!-- Timeline -->
+    <h3>Become a member of The Green Party of England and Wales</h3>
+    <h4><i>17th April 2015 - Present</i></h4>
+    <hr>
+    <h3>Became a web developer for North Oxfordshire Green Party</h3>
+    <h4><i>11th August 2015 - Present</i></h4>
+    <a href="https://northoxfordshiregreenparty.org.uk"><h6>northoxfordshiregreenparty.org.uk</h6></a>
+    <hr>
+    <h3>Became Vice Chair of North Oxordshire Green Party</h3>
+    <h4><i>November 2015 - Present</i></h4>
+    <hr>
+    <h3>Contested the election of a county councillor for the Bicester Town division</h3>
+    <h4><i>4th May 2017</i></h4>
+    <img src="images/bicestertownelection2017.png">
+    <br>
+    <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLJSZPV8nvInM0TSCFq9gQzoZ4Vcpra9wr" frameborder="0" allowfullscreen></iframe>
+    <br>
+    <br>
+    <hr>
+    <!-- Site Nav -->
+    <h2>Site Contents</h2>
+        <ul>
+            <li><a href="projects.html">Personal Projects</li></a>
+            <li><a href="experience.html">Experience</li></a>
+            <li><a href="education.html">Education</li></a>
+            <li><a href="politics.html">Politics</li></a>
+        </ul>
     </body>
 </html>
