added experience content

--- a/experience.html
+++ b/experience.html
@@ -7,9 +7,19 @@
     <body>
     <a href="index.html"><h1>Robert Nixon</h1></a>
     <h2>Experience</h2>
-    <hr>
     <!-- Develop 1 -->
-    <h3>Develop 1 Ltd</h3><i><h6>July 2016</h6></i>
+    <h3>Develop 1 Ltd</h3>
+    <i><h6>July 2016</h6></i>
+    <p>I joined Develop 1 Limited for a week of work experience after finishing my AS Levels. Whilst working there I developed experience in managing and maintaining SQL databases with MS server management studio. I also learned about the admin side of running a small business, for example I was put in change of calculating the expenses for the company for the past year. </p>
+    <hr>
+    <!-- NOGP -->
+    <h3>North Oxfordshire Green Party</h3>
+    <i><h6>August 2015 - Present</h6></i>
+    <p>I joined the North Oxfordshire Green Party in April 2015 just before the General Election. Since then I have been elected Vice Chairperson of the branch and have created a new website (<a href="https://northoxfordshiregreenparty.org.uk">northoxfordshiregreenparty.org.uk</a>) for them, adding features as required. 
+        <br>
+        <br>
+        Possibly the most valuable experience I have gained from being a part of this organisation is the soft skills that I have developed. In my opinion, the current Computer Science curriculum in the UK does little to build vital soft skills, such as working in teams on projects, that are vital to have in the workplaces of today. I believe being part of the North Oxfordshire Green Party and being trusted with a level of responsibility that I had not previously experienced has enhanced my ability to work in teams, deliver work/projects to deadlines and communicate clearly with others
+    </p>
     <hr>
     <!-- Site Nav -->
     <h2>Site Contents</h2>
