--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div style="display:flex;align-items:center;">
         <p>
             Hi, I'm Robert Nixon and welcome to my personal website.<br>
-            I'm an 18 year old Computer Science student from Bicester, UK. I enjoy buiding software in my spare time and I'm active in the Green Party of England and Wales.
+            I'm a Computer Science student from Bicester, UK. I enjoy buiding software in my spare time and I'm active in the Green Party of England and Wales.
         </p> 
         <img style="width:200px;height:200px" src="images/robertprofile.jpg">
         </div>
