--- a/experience.html
+++ b/experience.html
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="projects.html">Personal Projects</li></a>
             <li><a href="experience.html">Experience</li></a>
-            <li><a href="education.html">Education</li></a>
+            <li><a href="docs/CVRobertNixon010717.pdf">Detailed CV</li></a>
             <li><a href="politics.html">Politics</li></a>
         </ul>
     </body>
