--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,6 @@
     <body>
     <a href="index.html"><h1>Robert Nixon</h1></a>
     <h2>Projects</h2>
-    <hr>
     <!-- Computing Tutor Project -->
     <h3><a href="https://computingtutor.net">Computing Tutor</a> - <i>A website providing free tutorial videos for learning computer science.</i></h3>
     <p>I started this project in July 2016 as part of my level 3 extended project qualification.<br><br> 
@@ -30,7 +29,7 @@
         <ul>
             <li><a href="projects.html">Personal Projects</li></a>
             <li><a href="experience.html">Experience</li></a>
-            <li><a href="education.html">Education</li></a>
+            <li><a href="docs/CVRobertNixon010717.pdf">Detailed CV</li></a>
             <li><a href="politics.html">Politics</li></a>
         </ul>
     </body>
