added canvass master project

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,25 @@
         <li><a href="https://computingtutor.blogspot.co.uk/">Blog</a></li>
     </ul>
     <hr>
+    <!-- Canvass Master Project -->
+    <h3>Canvass Master - <i>A mobile application to improve the effectiveness and efficiency of canvassing in first past the post elections.</i></h3>
+    <p>
+        I developed the first version of Canvass Master for my A Level Computer Science coursework.
+        <br><br>
+        I thought of the idea whilst overseeing the canvassing process in the
+        Green Party. Data from the canvassing session would be entered into a
+        spreadsheet after being recorded on canvass sheets and then analysed. I
+        realised that if we had an application canvassers could use on their
+        mobile phones that allowed them to enter the data about each
+        conversation and instantly record it in a database, it would save hours of
+        time spent entering data and free up more time for party members to
+        talk to more voters and carry out other tasks.
+        <br><br>
+        The version I created for my A-Level Computer Science was not suitable
+        for public release, however I&#146;m looking to develop the app further and to
+        release it in future.
+    </p>
+    <hr>
     <!-- Site Nav -->
     <h2>Site Contents</h2>
         <ul>
