added about page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <ul>
                     <li>For Computing Tutor - robertnixon@computingtutor.net</li>
                     <li>For The Green Party - robertnixon@northoxfordshiregreenparty.org.uk</li>
+                    <li>For anything else - robertnixon59@gmail.com</li>
                 </ul>
             </li>
             <li>Personal Twitter - <a href="https://twitter.com/robertnixongp">@robertnixongp</a></li>
@@ -33,6 +34,7 @@
             <li><a href="experience.html">Experience</li></a>
             <li><a href="docs/CVRobertNixon010717.pdf">Detailed CV</li></a>
             <li><a href="politics.html">Politics</li></a>
+            <li><a href="about.html">About</li></a>
         </ul>
     </body>
 </html>
