--- a/politics.html
+++ b/politics.html
@@ -34,6 +34,7 @@
             <li><a href="experience.html">Experience</li></a>
             <li><a href="docs/CVRobertNixon010717.pdf">Detailed CV</li></a>
             <li><a href="politics.html">Politics</li></a>
+            <li><a href="about.html">About</li></a>
         </ul>
     </body>
 </html>
