added linkedin profile

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 </ul>
             </li>
             <li>Personal Twitter - <a href="https://twitter.com/robertnixongp">@robertnixongp</a></li>
+            <li>LinkedIn - <a href="https://www.linkedin.com/in/prorobertnixon/">Robert Nixon</a></li>
             <li>Github - <a href="https://github.com/robnixon">@robnixon</a></li>
         </ul>
 
