added blog to homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <div style="display:flex;align-items:center;">
         <p>
             Hi, I'm Robert Nixon and welcome to my personal website.<br>
-            I'm a Computer Science student from Bicester, UK. I enjoy buiding software in my spare time and I'm active in the Green Party of England and Wales.
+	    I'm a Computer Science student from Bicester, UK. I enjoy buiding software in my spare time and I'm active in the Green Party of England and Wales.<br><br>
+	    On my blog <a href="https://computingtutor.blogspot.co.uk/">The Computing Tutor</a> you'll find a variety of articles I've written including advice for CS students, opinion pieces and anything technology related that I think others might find interesting.
         </p> 
         <img style="width:200px;height:200px" src="images/robertprofile.jpg">
         </div>
