added Android App link to Computing tutor project

--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,11 @@
         <li><a href="https://github.com/computingtutor">Github</a></li>
         <li><a href="https://computingtutor.blogspot.co.uk/">Blog</a></li>
     </ul>
+    <h4>The Android App</h4>
+    <p>I've also created an Android application using the YouTube data API to make it easy for users of mobile devices to browse my videos.</p>
+    <center>
+        <a href='https://play.google.com/store/apps/details?id=net.computingtutor.robert.computingtutor&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img width="250" height="97" alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
+    </center>
     <hr>
     <!-- Canvass Master Project -->
     <h3>Canvass Master - <i>A mobile application to improve the effectiveness and efficiency of canvassing in first past the post elections.</i></h3>
