--- a/politics.html
+++ b/politics.html
@@ -13,7 +13,7 @@
     <hr>
     <h3>Became a web developer for North Oxfordshire Green Party</h3>
     <h4><i>11th August 2015 - Present</i></h4>
-    <a href="https://northoxfordshiregreenparty.org.uk"><h6>northoxfordshiregreenparty.org.uk</h6></a>
+    <a href="http://nogp.org.uk"><h6>nogp.org.uk</h6></a>
     <hr>
     <h3>Became Vice Chair of North Oxordshire Green Party</h3>
     <h4><i>November 2015 - Present</i></h4>
