--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ title: Blog
 permalink: /blog/
 ---
 
-# Blog
+<h2>Blog Posts</h2>
 
 {% for post in site.posts %}
   {% capture month %}{{ post.date | date: '%m%Y' }}{% endcapture %}
@@ -13,7 +13,7 @@ permalink: /blog/
     {% if forloop.index != 1 %}
       </ul>
     {% endif %}
-    <h5>{{ post.date | date: '%B %Y' }}</h5>
+    <h3>{{ post.date | date: '%B %Y' }}</h3>
     <ul>
   {% endif %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
